hphp/hack/test/typecheck/shapes_cc_4.php.exp
File "shapes_cc_4.php", line 25, characters 44-45:
Could not find class constant X3 in type X (Typing[4090])
File "shapes_cc_4.php", line 14, characters 7-7:
Declaration of X is here
